[package]
name = "opentelemetry-rs"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
combine = "4"
quick-protobuf = "0.8.1"
thiserror = "1"

[build-dependencies]
pb-rs = "0.10.0"
walkdir = "2.3.2"
